--- a/src/0header/header.css
+++ b/src/0header/header.css
@@ -68,8 +68,8 @@
   justify-content: center;
   align-items: flex-start;
   width: 80vw;
-  padding-top: 6em;
   padding-left: 2.5em;
+  position: relative;
 }
 
 /* .fheader:hover h1 {
