--- a/src/style.css
+++ b/src/style.css
@@ -1,27 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@300&family=Playfair+Display:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=BIZ+UDPMincho:wght@700&family=IM+Fell+Great+Primer+SC&family=Lily+Script+One&family=Space+Grotesk&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mea+Culpa&display=swap");
 
 html {
-  scroll-behavior: smooth !important;
-  /* --backgroundradiant: rgba(79, 93, 117,1); */
-  --backgroundradiant: rgb(25, 97, 169);
-  --background-color1: rgba(248, 249, 250, 1);
-  --background-color2: #e9ecef;
-  --background-color3: #dee2e6;
-  --maincolor: rgb(27, 42, 65);
-  --sccolor: #6c757d;
-  --grain: #d0021b;
-  --circlesize: 50%;
-  --portfolio: transparent;
-  --glasscolor: rgba(255, 255, 255, 0.202);
-  --glasscolortext: rgba(255, 255, 255);
-  /* --photofilter: sepia(100%) hue-rotate(150deg) saturate(100%); */
-}
-
-/*   --maincolor: #495057;  */
-
-html.dark {
   scroll-behavior: smooth !important;
   --backgroundradiant: rgba(25, 25, 25, 1);
   --background-color1: rgba(0, 0, 0, 1);
@@ -32,10 +14,31 @@ html.dark {
   --grain: #888888;
   --circlesize: 50%;
   --portfolio: whitesmoke;
-  --photofilter: brightness(70%);
+  --photofilter: brightness(95%);
   --glasscolor: rgba(22, 22, 22, 0.4);
   --glasscolortext: rgb(0, 0, 0);
+  --glow: whitesmoke;
 }
+
+html.dark {
+  scroll-behavior: smooth !important;
+  /* --backgroundradiant: rgba(79, 93, 117,1); */
+  --backgroundradiant: rgb(25, 97, 169, 0.8);
+  --background-color1: rgba(248, 249, 250, 1);
+  --background-color2: #e9ecef;
+  --background-color3: #dee2e6;
+  --maincolor: rgb(27, 42, 65);
+  --sccolor: #6c757d;
+  --grain: #d0021b;
+  --circlesize: 50%;
+  --portfolio: transparent;
+  --glasscolor: rgba(255, 255, 255, 0.202);
+  --glasscolortext: rgba(255, 255, 255);
+  --glow: rgb(120, 171, 215);
+  /* --photofilter: sepia(100%) hue-rotate(150deg) saturate(100%); */
+}
+
+/*   --maincolor: #495057;  */
 
 section {
   height: 60vh;
@@ -58,16 +61,24 @@ body {
 
 h1 {
   /*header*/
-  color: var(--maincolor);
-  font-family: "Abril Fatface", serif;
+  /* color: var(--maincolor); */
+  /* font-family: "Abril Fatface", serif;
   font-style: italic;
-  font-size: 7.2em;
+  font-size: 7.2em; */
+  font-family: "Mea Culpa", cursive;
+  font-weight: 100;
+  font-style: italic;
+  font-size: 10.5em;
   box-sizing: border-box;
   padding-right: 30px;
   margin: 0%;
+  transform: translateY(50px);
   overflow: hidden;
   user-select: none;
   filter: drop-shadow(0 0 5px var(--maincolor));
+  color: var(--portfolio);
+  -webkit-text-stroke-width: 0.7px;
+  -webkit-text-stroke-color: var(--maincolor);
 
   /* animation: 
     typing 2s steps(25, end);
@@ -91,6 +102,7 @@ h1 {
 
 h2 {
   /*sc header title*/
+  background-color: var(--background-color3);
   color: var(--maincolor);
   font-family: "Montserrat", sans-serif;
   font-size: 1.4em;
@@ -99,6 +111,7 @@ h2 {
   padding: 0%;
   animation: fadein 3s;
   user-select: none;
+  z-index: 5;
 }
 
 a {
@@ -109,7 +122,7 @@ a {
 }
 
 a:hover {
-  text-shadow: 0px 0px 10px var(--maincolor);
+  text-shadow: 0px 0px 10px var(--glow);
   font-size: 1.2em;
 }
 
@@ -117,7 +130,7 @@ h5 {
   /*menu*/
   color: var(--maincolor);
   font-family: "Montserrat", sans-serif;
-  font-size: 1em;
+  font-size: 0.8em;
   user-select: none;
   padding: 0%;
   margin: 0%;
@@ -125,7 +138,7 @@ h5 {
 
 h6 {
   /*caption*/
-  font-family: "Abril Fatface", serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1em;
   color: var(--maincolor);
   text-align: center;
@@ -134,6 +147,7 @@ h6 {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  z-index: 4;
 }
 
 @keyframes fadein {
@@ -145,21 +159,36 @@ h6 {
   }
 }
 
+@keyframes fadeout {
+  from {
+    opacity: 100%;
+  }
+  to {
+    opacity: 0%;
+  }
+}
+
 h4 {
   /* pj tilte */
-  color: var(--portfolio);
-  font-family: "Abril Fatface", serif;
+  /* color: var(--portfolio); */
+  color: var(--maincolor);
+  font-family: "Montserrat", sans-serif;
+  font-weight: 100;
   font-size: 2em;
-  -webkit-text-stroke-width: 0.1px;
-  -webkit-text-stroke-color: var(--maincolor);
+  line-height: 40px;
+  /* -webkit-text-stroke-width: 0.1px;
+  -webkit-text-stroke-color: var(--maincolor); */
   padding: 0%;
   margin: 0%;
+
+  /* font-family: "Abril Fatface", serif; 
+    font-size: 2em;*/
 }
 
 @media screen and (max-width: 768px) {
   h1 {
     /*header*/
-    font-size: 6.3em;
+    font-size: 10em;
     padding-right: 10px;
   }
   h2 {
@@ -170,7 +199,8 @@ h4 {
 
 @media screen and (max-width: 540px) {
   h1 {
-    font-size: 4.2em;
+    font-size: 7em;
+    transform: translateY(20px);
   }
   h2 {
     font-size: 0.7em;
@@ -187,7 +217,8 @@ h4 {
 
 @media screen and (max-width: 370px) {
   h1 {
-    font-size: 3em;
+    font-size: 5em;
+    transform: translateY(10px);
   }
   h2 {
     font-size: 0.3em;
@@ -197,83 +228,3 @@ h4 {
     font-size: 0.7em;
   }
 }
-
-/* text {
-  color: whitesmoke;
-  text-align: justify;
-} */
-
-/* h5:hover {
-  filter: drop-shadow(0 0 2em #ffffff);
-background-color: red;
-} */
-/*
-
-  font-size: 3.2em;
-  line-height: 1.1;
-
-
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-  width: 100vh;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-
-
-
-
-
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-*/
