--- a/src/0header/header.css
+++ b/src/0header/header.css
@@ -32,8 +32,6 @@
   justify-content: flex-end;
   box-sizing: border-box;
   padding-inline: 10%;
-  /* padding-inline:  10%;
-          box-sizing: border-box; */
 }
 
 .topbarcontent {
@@ -72,11 +70,6 @@
   position: relative;
 }
 
-/* .fheader:hover h1 {
-              font-size: 5.5em;
-              transition-duration: 2s;
-            } */
-
 .fheader h2 {
   display: flex;
 }
@@ -92,6 +85,7 @@
   justify-content: center;
   align-items: center;
   outline: 1px solid var(--maincolor);
+  z-index: 6;
 }
 
 .contactbutton h5 {
