--- a/src/3projects/pjc.css
+++ b/src/3projects/pjc.css
@@ -55,7 +55,7 @@
 .pphoto {
   width: 100%;
   height: 60%;
-  /* background-image: url("../assets/pjc.jpg"); */
+  /* background-image: url("../assets/jpg"); */
   background-position: center;
   background-size: cover;
   border-radius: 20px 20px 0px 0px;
@@ -79,7 +79,6 @@
 
 @media screen and (max-width: 768px) {
   .fprojects {
-    background-color: beige;
     width: 90%;
     height: 100%;
     display: flex;
@@ -89,6 +88,7 @@
     box-sizing: border-box;
     gap: 10%;
     padding-inline: 5%;
+    overflow-x: scroll;
   }
 
   .fproject {
@@ -99,19 +99,8 @@
     border-width: 1px;
     border-color: var(--maincolor);
     border-style: solid;
-    /* box-shadow:  0 0 10px 3px rgba(0, 0, 0, 0.2), inset 0 0 10px 3px rgba(192, 192, 192, 0.2); */
-    /* box-shadow:  -20px -20px 20px #ffffff 0.6,
-                10px 10px 20px #AEAEC0 0.4, inset 4px 4px 6px #FFFFFF; */
 
     box-shadow: 10px 10px 20px #00000080, -5px -5px 20px #ffffff23,
       inset 4px 4px 6px #ffffff46;
   }
 }
-
-/* box-shadow:  0 0 10px 3px rgba(0, 0, 0, 0.2), inset 0 0 10px 3px rgba(192, 192, 192, 0.2); */
-/* box-shadow:  -20px -20px 20px #ffffff 0.6,
-                            10px 10px 20px #AEAEC0 0.4, inset 4px 4px 6px #FFFFFF; */
-
-/* box-shadow: 10px 10px 20px #00000080,
-                            -5px -5px 20px #ffffff23,
-                            inset 4px 4px 6px #ffffff46 ; */
