--- a/src/4gallery/gallery.css
+++ b/src/4gallery/gallery.css
@@ -14,6 +14,7 @@
   flex-direction: column;
   z-index: 1;
   height: auto;
+  min-height: 40em;
 }
 
 .gallery {
@@ -24,10 +25,8 @@
   flex-wrap: wrap;
   box-sizing: border-box;
   padding-inline: 11%;
-  padding-bottom: 5%;
   z-index: 4;
   justify-content: space-between;
-  /* overflow-x: scroll; */
 }
 
 .column {
@@ -51,6 +50,15 @@
   filter: brightness(100%);
   outline: 2px solid var(--maincolor);
   cursor: pointer;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  height: 50px;
+  width: 100%;
+  padding: 5%;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 800px) {
