--- a/src/3projects/pjc.css
+++ b/src/3projects/pjc.css
@@ -26,7 +26,9 @@
 }
 
 .fprojects {
-  overflow-x: hidden;
+  -ms-overflow-style: none;
+  overflow: auto;
+  scrollbar-width: 0;
   width: 80%;
   height: 100%;
   display: flex;
@@ -35,6 +37,10 @@
   align-items: center;
   gap: 2%;
   padding: 3%;
+}
+
+.fprojects::-webkit-scrollbar {
+  display: none;
 }
 
 .fproject {
